# vercel-axum-router

./: .env  Cargo.toml  vercel.json
api/: foo.rs  handler.rs  main.rs
src/: lib.rs
