[package]
name = "vermicelli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.6"
serde_json = { version = "1.0.108" }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tower = "0.4.13"
tower-service = "0.3.2"
vercel_runtime = "1.1.0"

[[bin]]
name = "main"
path = "api/main.rs"
